# redis_simple

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml
benchmarks/: buffer.h  dict_benchmark.cpp  dynamic_buffer_benchmark.cpp  query_buffer_benchmark.cpp  reply_buffer_benchmark.cpp
cli/: cli.cpp  cli.h  completable_future.h  resp_parser.cpp  resp_parser.h  resp_parser_test.cpp
connection/: conn_handler.h  connection.cpp  connection.h  connection_callback.h
event_loop/: ae.cpp  ae.h  ae_file_event.h  ae_file_event_base.h  ae_file_event_impl.h  ae_kqueue.cpp  ae_kqueue.h  ae_time_event.h  ae_time_event_impl.h
integration/command/: server_test.cpp
integration/command/set/: client_test.cpp
integration/command/string/: client_test.cpp
integration/command/t_set/: client_test.cpp
integration/command/t_string/: client_test.cpp
integration/command/t_zset/: client_test.cpp
integration/command/zset/: client_test.cpp
integration/commands/key/: client_test.cpp
integration/commands/list/: client_test.cpp
integration/commands/set/: client_test.cpp
integration/commands/string/: client_test.cpp
integration/commands/zset/: client_test.cpp
integration/event_loop/: client_test.cpp  server_test.cpp
integration/tcp/: client_test.cpp  server_test.cpp
logging/: logger.h
memory/: buf_node.h  dict.h  dict_test.cpp  dynamic_buffer.cpp  dynamic_buffer.h  dynamic_buffer_test.cpp  intset.cpp  intset.h  intset_test.cpp  listpack.cpp  listpack.h  listpack_test.cpp  quicklist.cpp  quicklist.h  quicklist_test.cpp  reply_buffer.cpp  reply_buffer.h  reply_buffer_test.cpp  skiplist.h  skiplist_test.cpp
scripts/: format.sh  run_clang_tidy.sh  run_integration_commands.sh  run_integration_tcp.sh
server/: client.cpp  client.h  expire.cpp  expire.h  main.cpp  server.cpp  server.h  t_cmd.cpp  t_cmd.h  t_string.cpp  t_string.h  t_zset.cpp  t_zset.h
server/client_connection/: callback.cpp  callback.h  client_connection.cpp  client_connection.h  redis_cmd.cpp  redis_cmd.h
server/client_connection/callback/: read_query.cpp  read_query.h  read_query_from_client.cpp  read_query_from_client.h  write_reply.cpp  write_reply.h  write_reply_to_client.cpp  write_reply_to_client.h
server/commands/: command.cpp  command.h  handlers.h
server/commands/key/: del.cpp  exists.cpp  type.cpp
server/commands/list/: list.cpp
server/commands/set/: sadd.cpp  scard.cpp  sismember.cpp  smembers.cpp  srem.cpp
server/commands/string/: args.h  get.cpp  set.cpp
server/commands/t_set/: sadd.cpp  sadd.h  scard.cpp  scard.h  sismember.cpp  sismember.h  smembers.cpp  smembers.h  srem.cpp  srem.h
server/commands/t_string/: args.h  delete.cpp  delete.h  get.cpp  get.h  set.cpp  set.h
server/commands/t_zset/: args.h  zadd.cpp  zadd.h  zcard.cpp  zcard.h  zrange.cpp  zrange.h  zrank.cpp  zrank.h  zrem.cpp  zrem.h  zscore.cpp  zscore.h
server/commands/zset/: zadd.cpp  zcard.cpp  zrange.cpp  zrank.cpp  zrem.cpp  zscore.cpp
server/conn_handler/: conn_handler.cpp  conn_handler.h
server/connection/: connection.cpp  connection.h  tcp.cpp  tcp.h
server/db/: db.cpp  db.h  redis_obj.cpp  redis_obj.h
server/event_loop/: ae.cpp  ae.h  ae_file_event.h  ae_file_event_base.h  ae_kqueue.h  ae_time_event.h
server/memory/: dict.h  query_buffer.cpp  query_buffer.h  reply_buffer.h
server/networking/: networking.cpp  networking.h  redis_cmd.cpp  redis_cmd.h
server/networking/conn_handler/: conn_handler.cpp  conn_handler.h  read_client.cpp  read_client.h  write_client.cpp  write_client.h
server/networking/connection_callback/: connection_callback.cpp  connection_callback.h  read_client_callback.cpp  read_client_callback.h  write_client_callback.cpp  write_client_callback.h
server/networking/handler/: read_client.cpp  read_client.h  write_client.cpp  write_client.h
server/redis_cmd/: redis_cmd.cpp  redis_cmd.h
server/reply/: reply.cpp  reply.h  reply_test.cpp
server/reply_utils/: reply_utils.h  reply_utils_test.cpp
server/set/: set.cpp  set.h  set_test.cpp
server/utils/: string_utils.h  time_utils.h
server/zset/: z_set.cpp  z_set.h  zset.cpp  zset.h  zset_listpack.cpp  zset_listpack.h  zset_listpack_test.cpp  zset_skiplist.cpp  zset_skiplist.h  zset_skiplist_test.cpp  zset_storage.h  zset_test.cpp
src/: client.h  expire.cpp  expire.h  server.cpp  server.h  t_string.cpp  t_string.h
src/conn_handler/: conn_handler.cpp  conn_handler.h
src/connection/: connection.cpp  connection.h  tcp.cpp  tcp.h
src/db/: db.cpp  db.h  redis_obj.h
src/event_loop/: ae.cpp  ae.h  ae_file_event.h  ae_kqueue.cpp  ae_kqueue.h  ae_time_event.h
src/memory/: buf_node.h  dict.h  query_buffer.cpp  reply_buffer.cpp
src/networking/: networking.cpp  networking.h
src/networking/handler/: read_client.cpp  read_client.h  write_client.cpp  write_client.h
src/redis_cmd/: redis_cmd.cpp  redis_cmd.h
src/reply/: reply.cpp  reply.h
src/utils/: string_utils.cpp  time_utils.h
storage/list/: list.cpp  list.h  list_test.cpp
storage/set/: set.cpp  set.h  set_test.cpp
storage/zset/: zset.cpp  zset.h  zset_entry.h  zset_listpack.cpp  zset_listpack.h  zset_listpack_test.cpp  zset_range_spec.h  zset_skiplist.cpp  zset_skiplist.h  zset_skiplist_test.cpp  zset_storage.h  zset_test.cpp
tcp/: tcp.cpp  tcp.h
test/cli/: resp_parser_test.cpp
test/command/t_set/: client_test.cpp
test/command/t_string/: client_test.cpp
test/command/t_zset/: client_test.cpp
test/event_loop/: client_test.cpp  server_test.cpp
test/memory/: dict_test.cpp  query_buffer_test.cpp  reply_buffer_test.cpp  skiplist_test.cpp
test/reply/: reply_test.cpp
test/server/: client_test.cpp  server_test.cpp
test/tcp/: client_test.cpp  server_test.cpp
utils/: float_utils.cpp  float_utils.h  int_utils.cpp  int_utils.h  string_utils.cpp  string_utils.h  string_utils_test.cpp  time_utils.h
